# Stat_386_final_project

./: Documentation.qmd  README.md  TechnicalReport.qmd  Tutorial.qmd  _quarto.yml  cleaning.py  index.qmd  pyproject.toml  streamlit_app.py  streamlit_page.py  styles.css  test_cleaning_results.html
.quarto/_freeze/Tutorial/execute-results/: html.json
.quarto/idx/: Documentation.qmd.json  TechnicalReport.qmd.json  Tutorial.qmd.json  index.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 101a44a0  INDEX
docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
docs/tests/: test.html
src/utah_housing_stat386/: __init__.py  cleaning.py  demo.py
tests/: package_test.py  test.ipynb  test_cleaning.py
