[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utah_housing_stat386"
version = "0.2.1"  # Increment version for TestPyPI
description = "A package to scrape Utah housing data for certain cities of Salt Lake and Utah counties"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Seth Frandsen, Carson Ordyna", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crawlee[playwright]>=1.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "streamlit>=1.52.1",
]

[project.urls]
Homepage = "https://github.com/sethfrand/Stat_386_final_project"
Repository = "https://github.com/sethfrand/Stat_386_final_project.git"
Issues = "https://github.com/sethfrand/Stat_386_final_project/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/utah_housing_stat386"]

[tool.hatch.build.targets.wheel.force-include]
"src/utah_housing_stat386/data" = "utah_housing_stat386/data"

# Ensure source distribution also includes package and data files
[tool.hatch.build.targets.sdist]
include = [
  "src/utah_housing_stat386/**",
  "README.md",
  "LICENSE"
]
